[project]
name = "agent-framework"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
]

[tool.pytest.ini_options]
# Pytest configuration file
pythonpath = "."
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(levelname)s %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"

# Output options
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=agent",
    "--cov-report=term-missing",
]

# Markers
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: end 2 end tests",
    "slow: Tests that take a long time to run",
    "llm: Tests that call a real LLM",
]
